--- a/网络公共资源.md
+++ b/网络公共资源.md
@@ -1,18 +1,16 @@
 # 网络公共资源
 
 ## 时间服务器
-公共 NTP 服务器
 
-目前，阿里云以外的设备不能使用以上内网 NTP 服务器。不过，我们同时提供了公共 NTP 服务器，供互联网上的设备使用。主要特性是GPS、北斗授时、原子钟守时的一级时间源多机房、多链路冗余。服务域名为：
+目前，阿里云时间服务器是GPS、北斗授时、原子钟守时的一级时间源多机房、多链路冗余。服务域名为：
 
-Unix 类： time1-7.aliyun.com
-Windows： time.pool.aliyun.com
-互联网基础服务
+* Unix 类： time1-7.aliyun.com  
+* Windows： time.pool.aliyun.com  
 
-此外，阿里云提供了其他的互联网基础服务，例如：
+## 互联网基础服务
 
-公共 DNS：223.5.5.5 / 223.6.6.6
-域名：http://www.alidns.com
-公共镜像站：http://mirrors.aliyun.com/
-镜像同步频率：每天凌晨 2:00-4:00。覆盖了大多数开源软件及 Linux 发行版。
-如果问题还未能解决，您可以到阿里云社区进行免费咨询，或联系云市场商家寻求帮助。
+公共 DNS：223.5.5.5 / 223.6.6.6  
+域名：http://www.alidns.com  
+公共镜像站：http://mirrors.aliyun.com/  
+镜像同步频率：每天凌晨 2:00-4:00。覆盖了大多数开源软件及 Linux 发行版。  
+
