添加网易开源镜像站

--- a/网络公共资源.md
+++ b/网络公共资源.md
@@ -1,5 +1,10 @@
 # 网络公共资源
 
+## 开源镜像站  
+
+* 网易开源镜像站：http://mirrors.163.com/  
+* 阿里云开源镜像站：http://mirrors.aliyun.com/  
+
 ## 时间服务器
 
 目前，阿里云时间服务器是GPS、北斗授时、原子钟守时的一级时间源多机房、多链路冗余。服务域名为：
@@ -11,6 +16,6 @@
 
 公共 DNS：223.5.5.5 / 223.6.6.6  
 域名：http://www.alidns.com  
-公共镜像站：http://mirrors.aliyun.com/  
 镜像同步频率：每天凌晨 2:00-4:00。覆盖了大多数开源软件及 Linux 发行版。  
+
 
